tests/snapshots/run_wpt_conformance__coreml_reciprocal_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reciprocal.https.any.js",
    "reciprocal float16 0D scalar",
    "coreml",
    "PASS",
)
